Fix twitter avatar misaligned

--- a/app/assets/stylesheets/ltags/TweetTag.scss
+++ b/app/assets/stylesheets/ltags/TweetTag.scss
@@ -65,6 +65,7 @@ blockquote.ltag__twitter-tweet {
       left: calc(0.3vw + 13px);
       top: calc(0.3vw + 13px);
       background-color: #ececec;
+      margin: 0;
     }
     .ltag__twitter-tweet__twitter-logo {
       position: absolute;
